# 2025-edd-gcloud-backend-resource

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PERFORMANCE.md  pyproject.toml
app/api/routers/: gemini.py  health.py
app/services/: gemini_service.py
tests/: __init__.py  conftest.py  test_api_routers.py  test_health.py  test_main.py
